fix default json

--- a/DefaultConfigs/defaultConfigs.json
+++ b/DefaultConfigs/defaultConfigs.json
@@ -183,7 +183,7 @@
 			"height":800,
 			"width": 600
 		},
-		{"name":"CaptainAmerica",
+		{"name":"ChunLi",
 			"filepath": "../Images/menu_seleccion/CL.png",
 			"x": 200,
 			"y":0,
