agrego todo para levantar desde el json, buildea falta el resto para probarlo. AHI TIENEN SU MALDITO COMMIT DESCRIPTIVO VAMOS NEWELLS

--- a/DefaultConfigs/defaultConfigs.json
+++ b/DefaultConfigs/defaultConfigs.json
@@ -250,6 +250,14 @@
 	"server":{
 		"clients": 4,
 		"port": 54000
+	},
+	"disconected":{
+		"name":"disconected",
+		"filepath": "../Images/disconected/disconected.png",
+		"x": 0,
+		"y": 0,
+		"height":1200,
+		"width": 700
 	}
 }
 
