Funca imagen disconnect desde json

--- a/DefaultConfigs/defaultConfigs.json
+++ b/DefaultConfigs/defaultConfigs.json
@@ -252,13 +252,13 @@
 		"port": 54000
 	},
 	"disconected":{
-		"name":"disconected",
-		"filepath": "../Images/disconected/disconected.png",
+		"name":"Disconected",
+		"filepath": "../Images/Disconnected/Disconnected.png",
 		"x": 1200,
 		"y": 700,
 		"height":1200,
 		"width": 700,
-        "z-index": 99
+		"z-index": 99
 	}
 }
 
