--- a/configs.json
+++ b/configs.json
@@ -37,6 +37,8 @@
 			{
 				"name":"CaptainAmerica",
 			 	"filepath":"../Images/Characters/CaptainAmerica.png",
+				"lifebarpath" : "../Images/life_frame/vida-captainamerica.png",
+				"zindexlife" : 99,
 			 	"height":280,
 			 	"width":200,
 			 	"zindex":99,
@@ -48,7 +50,9 @@
 			{
 				"name":"ChunLi",
 			 	"filepath":"../Images/Characters/ChunLi.png",
-			 	"height":220,
+				"lifebarpath" : "../Images/life_frame/vida-chunli.png",
+				"zindexlife" : 99,
+				"height":220,
 			 	"width":200,
 			 	"zindex":99,
 			 	"spriteManagerName": "ChunLi",
@@ -59,6 +63,8 @@
 			{
 				"name":"SpiderMan",
 			 	"filepath":"../Images/Characters/SpiderMan.png",
+				"lifebarpath" : "../Images/life_frame/vida-spiderman.png",
+				"zindexlife" : 99,
 			 	"height":245,
 			 	"width":274,
 			 	"zindex":98,
@@ -70,6 +76,8 @@
 			{
 				"name":"Venom",
 			 	"filepath":"../Images/Characters/Venom.png",
+				"lifebarpath" : "../Images/life_frame/vida-venom.png",
+				"zindexlife" : 99,
 			 	"height":249,
 			 	"width":293,
 			 	"zindex":98,
