--- a/DefaultConfigs/defaultConfigs.json
+++ b/DefaultConfigs/defaultConfigs.json
@@ -161,7 +161,7 @@
 			"width": 600
 		},
 		{
-			"name":"CaptainAmerica",
+			"name":"ChunLi",
 			"filepath": "../Images/menu_seleccion/CL.png",
 			"x": 200,
 			"y":0,
